<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dog_breed_details_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:title="@string/dog_breed_screen_title"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:text="@string/dog_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_breed_details_toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageViewCard"
        android:layout_width="330dp"
        android:layout_height="330dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/dog_name_in_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:cardElevation="4dp">
        <ImageView
            android:id="@+id/imageViewDog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dog_name_in_card"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            />
    </androidx.cardview.widget.CardView>


    <!-- Bred For -->
    <TextView
        android:id="@+id/textViewBreedFor"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dog_bred_for"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        tools:ignore="MissingConstraints">

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewBreedFor"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textViewBreedGroupLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_breed_group"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewBreedGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog_breed_group"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textViewTemperamentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_temparment"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTemperament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog_temparment"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textViewLifeSpanLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_life_span"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewLifeSpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog_life_span"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>